[package]
name = "kon"
version = "0.0.1"
edition = "2021"
authors = ["Gabriel Lugo <dev.gabriel.lugo@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }

tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.44"

bytemuck = "1.13.1"
strum = { version = "0.25.0", features = ["derive"] }